TFP-6405: Navngivning for BeregningsgrunnlagGrunnlag...